# signwriting-fonts

./: .gitignore  .pre-commit-config.yaml  LICENSE.md  Makefile  README.md  pyproject.toml
.github/workflows/: lint.yaml  test.yaml
fonts/: .gitignore
scripts/: visualize_compare.py
signwriting_fonts/: generate_vtp.py  modify_ttx.py
signwriting_fonts/boxes/: M.xml
signwriting_fonts/font_1d/: README.md  TODO.md  _symkey.py  build_font.py  circles.json  compositions.json  compositions.py  duplicates.json  ellipsed.json  extract.py  generate_vtp.py  optimize.py  report.py  rules.json  site.py  svg_path.py  test_compositions.py  test_extract.py  test_glyph_render.py  test_optimize.py  test_site_stats.py  test_tune_dedup.py  tune_dedup.py  variants.py
signwriting_fonts/font_1d/tests/: test_compositions.py  test_compositions_unit.py  test_extract.py  test_glyph_render.py  test_site_stats.py  test_svg_path.py
signwriting_fonts/font_2d/: add_gpos.py  generate_vtp.py
signwriting_fonts/font_2d/tests/: test_add_gpos.py  test_generate_vtp.py
