[project]
name = "signwriting-fonts"
description = "TTF Fonts for SignWriting"
version = "0.0.1"
authors = [
    { name = "Amit Moryossef", email = "amitmoryossef@gmail.com" }
]
readme = "README.md"
dependencies = [
]

[project.optional-dependencies]
dev = [
    "pytest",
    "pylint",
    "fontTools",
    "numpy",      # optimize.py LSQ circle fit; render-IOU tests
    "Pillow",     # rasterised-mask tests
]

[tool.yapf]
based_on_style = "google"
column_limit = 120

[tool.pylint]
max-line-length = 120
# Score floor: lets the existing baseline pass while still catching real
# regressions. Tighten as code quality improves.
fail-under = 8.5
disable = [
    "C0114", # Missing module docstring
    "C0115", # Missing class docstring
    "C0116", # Missing function or method docstring
]

[tool.pylint.typecheck]
# fontTools.ttLib.tables.otTables synthesises classes (GPOS, Coverage,
# ChainContextPos, ...) at import time, so pylint can't see them via
# static analysis.
ignored-modules = ["fontTools.ttLib.tables.otTables"]

[tool.setuptools]
packages = [
    "signwriting_fonts",
    "signwriting_fonts.font_1d",
    "signwriting_fonts.font_2d",
]

[tool.pytest.ini_options]
addopts = "-v"
testpaths = ["signwriting_fonts"]
